--- a/gps_participant_survey_analysis.Rmd
+++ b/gps_participant_survey_analysis.Rmd
@@ -49,3 +49,120 @@ library(sf)
 victoria_gps_only <- read_csv("victoria_gps_only.csv")
 ```
 
+## Age descriptive Statistics for Victoria
+```{r}
+summary(victoria_gps_only$age_calculated, na.rm = TRUE)
+
+sd(victoria_gps_only$age_calculated)
+```
+
+## Age descriptive Statistics for Victoria
+```{r}
+age_categories_plot <- ggplot (data = victoria_gps_only, aes(age_categories)) + 
+    geom_bar() + 
+        labs(title = "Age ", 
+           x = "Age Categories", 
+            y = "Number of Participants (n)") + theme(axis.text.x = element_text(angle=60, hjust=1))
+plot(age_categories_plot)
+```
+
+## Gender
+```{r}
+tabyl(victoria_gps_only$gender)
+
+gender_plot <- ggplot(data = victoria_new_ID_gps, aes(gender)) +
+  geom_bar(aes(fill = gender)) +
+  labs(title = "Gender",
+       x = "Gender Type",
+       y = "Number of Participants (n)")
+plot(gender_plot)
+```
+
+
+## Health Status
+```{r}
+victoria_gps_only$health_status <- factor(victoria_gps_only$health_status, c("Poor", "Fair", "Good", "Very Good", "Excellent"))
+tabyl(victoria_gps_only$health_status)
+
+health_plot <- ggplot(data = victoria_gps_only, aes(health_status)) +
+  geom_bar() +
+  labs(title = "Health Status",
+       x = "Health Status",
+       y = "Number of Participants (n)") 
+plot(health_plot)
+```
+
+## Marital Status
+```{r}
+tabyl(victoria_gps_only$marital)
+marital_plot <- ggplot(data = victoria_gps_only, aes(marital)) +
+  geom_bar() +
+  labs(title = "Marital Status",
+       x = "Marital Status",
+       y = "Number of Participants (n)") + theme(axis.text.x = element_text(angle=60, hjust=1))
+plot(marital_plot)
+```
+## Ethnicity 
+```{r}
+tabyl(victoria_gps_only$ethnicity)
+ethnicity_plot <- ggplot(data = victoria_gps_only, aes(ethnicity)) +
+  geom_bar() +
+  labs(title = "Ethnicity",
+       x = "Ethnic Group",
+       y = "Number of Participants (n)") + theme(axis.text.x = element_text(angle=60, hjust=1))
+plot(ethnicity_plot)
+```
+
+## Income
+```{r}
+
+victoria_gps_only$income_1 <- factor(victoria_gps_only$income_1, c("No income", "$1 to $9,999", "$10,000 to $14,999", "$15,000 to $19,999", "$20,000 to $29,999", "$30,000 to $39,999", "$40,000 to $49,999","$50,000 to $99,999","$100,000 to $149,999","$150,000 to $199,999", "$200,000 or more", "I don't know/Prefer not to answer"))
+
+tabyl(victoria_gps_only$income_1)
+
+
+income_plot <- ggplot(data = victoria_new_ID_gps, aes(income_1)) +
+  geom_bar() +
+  labs(title = "Income",
+       x = "Income Level",
+       y = "Number of Participants (n)") + theme(axis.text.x = element_text(angle=60, hjust=1))
+plot(income_plot)
+```
+
+## Support for the AAA
+```{r}
+tabyl(victoria_gps_only$aaa_familiarity_1)
+
+victoria_new_ID_gps$aaa_idea_1 <- factor(victoria_new_ID_gps$aaa_idea_1, c("I don't know", "Very bad idea", "Somewhat bad idea", "Somewhat good idea", "Very good idea"))
+tabyl(victoria_gps_only$aaa_idea_1)
+tabyl(victoria_gps_only$aaa_bike_more_1)
+```
+
+##Preference for Separated Bike Lane
+```{r}
+victoria_gps_only$major_street_separated_bike_lane <- factor(victoria_gps_only$major_street_separated_bike_lane, c( "Very uncomfortable", "Somewhat uncomfortable", "Somewhat comfortable", "Very comfortable", "I don't know/Prefer not to answer"))
+tabyl(victoria_gps_only$major_street_separated_bike_lane)
+```
+
+## Children 
+```{r}
+tabyl(victoria_gps_only$children_1)
+tabyl(victoria_gps_only$living_children)
+```
+
+## Born in Canada
+```{r}
+tabyl(victoria_gps_only$born_canada)
+```
+
+## Car Access
+```{r}
+tabyl(victoria_gps_only$car_access)
+
+victoria_gps_only <- victoria_gps_only %>% mutate(car_access_1 = case_when(
+  car_access == 1 ~ "Yes",
+  car_access == 2 ~ "No"
+))
+tabyl(victoria_gps_only$car_access_1)
+tabyl(victoria_gps_only$cars_household)
+```
